frp/cert-manager/test-lcalvo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-lcalvo
  labels:
    domain: lcalvo.com
    environment: test
