frp/cert-manager/test-lcalvo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
  namespace: test-lcalvo
spec:
  selector:
    app: nginx-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
